🍫😽 Checkpoint ./public/script.js:7570007/29 ./webpack.config.js:3645266/830:7570007/4620 ./package.json:7570007/1284 ./views/index.html:7570007/11 ./server.js:7570007/9

--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="A cool thing made with Glitch" />
 
-    <title>welcome to website!</title>
+    <title>website!</title>
 
     <link rel="stylesheet" href="/style.css" />
   </head>
