--- a/views/index.html
+++ b/views/index.html
@@ -8,12 +8,12 @@
 
     <title>website!</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <header>
       <h1>GAMING!!!!!</h1>
     </header>
-    <script src="/script.js" defer></script>
+    <script src="/main.js" defer></script>
   </body>
 </html>
