--- a/views/index.html
+++ b/views/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
-    <header>
-      <h1>GAMING!!!!!</h1>
-    </header>
+    <div id="app">
+      <header>
+        <h1>LOADING!!!!!</h1>
+      </header>
+    </div>
     <script src="/main.js" defer></script>
   </body>
 </html>
