--- a/src/index.scss
+++ b/src/index.scss
@@ -2,21 +2,17 @@
 
 body {
   font-family: 'Comic Sans MS', 'Arial';
+}
 
-  nav {
-    a {
-      button {
-        background-color: #ffffff;
-      }
-      &.active {
-        button {
-          background-color: #dddddd;
-        }
-      }
-    }
+nav > a {
+  button {
+    background-color: #ffffff;
   }
+  &.active > button {
+    background-color: #dddddd;
+  }
+}
 
-  main {
-    margin: 16px;
-  }
+main {
+  margin: 16px;
 }
